Add new rpm build mechanism
Change-Id: I841e554e3a9d60d1e0366dc4ba937d7e21626fbf
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/configure.ac
+++ b/configure.ac
@@ -32,6 +32,9 @@ AC_SUBST([PLUGINNAME], ['oVirt Node Hosted Engine Plugin'])
 
 AM_INIT_AUTOMAKE([-Wall -Werror foreign -Wno-portability tar-pax])
 
+AC_ARG_VAR([RPMBUILD], [path to rpmbuild utility])
+AC_CHECK_PROGS([RPMBUILD], [rpmbuild])
+
 AM_PATH_PYTHON
 
 AC_CONFIG_FILES([Makefile
