--- a/ovirt-node-plugin-hosted-engine.spec.in
+++ b/ovirt-node-plugin-hosted-engine.spec.in
@@ -14,6 +14,7 @@ Group:          Applications/System
 Summary:        Hosted Engine plugin for %{product_family} image
 Requires:       ovirt-hosted-engine-setup
 Requires:       screen
+Requires:       python-requests
 
 
 %package recipe
