Rework the hosted-engine page
Add a progressbar for the downloads. Update it with a thread.
Clean up after ourselves if we exit. Don't show tracebacks from
the thread. Only show the dialog if it's the active plugin.

Don't show wget output on the screen. Keep the UI responsive
while potentially long downloads happen.

Change-Id: I15aa15a24cb087b21bf549f3353716764f29ae60
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1144915
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1147467
Signed-off-by: Ryan Barry <rbarry@redhat.com>

--- a/ovirt-node-plugin-hosted-engine.spec.in
+++ b/ovirt-node-plugin-hosted-engine.spec.in
@@ -15,6 +15,7 @@ Summary:        Hosted Engine plugin for %{product_family} image
 BuildRequires:  python-devel
 Requires:       ovirt-hosted-engine-setup
 Requires:       screen
+Requires:       python-requests
 
 
 %package recipe
