rwtab: Add /var/lib/ovirt-hosted-engine-setup
engine-setup needs to write answer.conf into
/var/lib/ovit-hosted-engine-setup/answers without making
the directory rw it will fail.

Change-Id: I50a6f8dea419f296a23940727827c5fd14f73375
Signed-off-by: Douglas Schilling Landgraf <dougsland@redhat.com>

--- a/ovirt-node-plugin-hosted-engine.spec.in
+++ b/ovirt-node-plugin-hosted-engine.spec.in
@@ -54,6 +54,7 @@ make install DESTDIR=%{buildroot}
 
 
 %files
+%{_sysconfdir}/rwtab.d/hosted-engine
 %{python_sitelib}/ovirt/node/setup/hostedengine
 #%{_sysconfdir}/ovirt-plugins.d
 
