hosted-engine: provide temp dir for execution
To avoid have the error of lack of space to execute .ova files
since ovirt-node is very compact image and we have bigger space
in /data this patch set the temp dir of ovirt-hosted-engine-setup
to /data/hosted_engine_temp.

Change-Id: Iee24d174e8ff0a0e1733c5c1fce45143abfde88a
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1208041
Signed-off-by: Douglas Schilling Landgraf <dougsland@redhat.com>
Reviewed-on: https://gerrit.ovirt.org/39475
Reviewed-by: Sandro Bonazzola <sbonazzo@redhat.com>
Tested-by: Ying Cui <ycui@redhat.com>
Reviewed-by: Fabian Deutsch <fabiand@redhat.com>
(cherry picked from commit 9fca2afa0a807fac78881746142aa84ffe37bb50)
Reviewed-on: https://gerrit.ovirt.org/42815
Continuous-Integration: Fabian Deutsch <fabiand@redhat.com>
Tested-by: Fabian Deutsch <fabiand@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -28,6 +28,7 @@ PACKAGE_RPM_VERSION="VERSION_NUMBER"
 PACKAGE_RPM_RELEASE="0.0.$(echo VERSION_SUFFIX | sed 's/^_//')"
 AC_SUBST([PACKAGE_RPM_VERSION])
 AC_SUBST([PACKAGE_RPM_RELEASE])
+AC_SUBST([HE_TMP_DIR], ['/data/ovirt-hosted-engine-setup/tmp-setup'])
 AC_SUBST([PLUGINNAME], ['oVirt Node Hosted Engine Plugin'])
 
 AM_INIT_AUTOMAKE([-Wall -Werror foreign -Wno-portability tar-pax])
@@ -39,6 +40,7 @@ AM_PATH_PYTHON
 
 AC_CONFIG_FILES([Makefile
                 src/Makefile
+                src/config.py
                 recipe/Makefile
                 rwtab/Makefile
                 ovirt-node-plugin-hosted-engine.spec])
