--- a/src/config.py.in
+++ b/src/config.py.in
@@ -1,4 +1,4 @@
-# Copyright (C) 2014 Red Hat, Inc.
+# Copyright (C) 2015 Red Hat, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -15,22 +15,4 @@
 # MA  02110-1301, USA.  A copy of the GNU General Public License is
 # also available at http://www.gnu.org/copyleft/gpl.html.
 
-nodeconfdir = $(sysconfdir)/sysconfig
-
-pyovirtsetupdir = $(pythondir)/ovirt/node/setup/hostedengine
-pyovirtsetup_PYTHON = \
-  hosted_engine_page.py \
-  __init__.py \
-  config.py
-
-# Requires python-pep8 package (Fedora)
-check-local: check-local-pep8
-
-check-local-pep8:
-	find $(srcdir) -name \*.py | sort | uniq | xargs pep8 --repeat --statistics --count
-
-check-local-doctest:
-	find $(srcdir) -name \*.py | sort | uniq | xargs python -m doctest -v
-
-clean-local:
-	rm -f config.py
+HOSTED_ENGINE_TEMPDIR  = '@HE_TMP_DIR@'
