spec: use %license macro
Spec should be based on Fedora RPM GuideLines.
https://fedoraproject.org/wiki/Packaging:LicensingGuidelines?rd=Packaging/LicensingGuidelines

Change-Id: I2526744e1e298cd1c61d6e521a39e2565148b607
Signed-off-by: Douglas Schilling Landgraf <dougsland@redhat.com>
Reviewed-on: https://gerrit.ovirt.org/39734

--- a/ovirt-node-plugin-hosted-engine.spec.in
+++ b/ovirt-node-plugin-hosted-engine.spec.in
@@ -24,6 +24,7 @@ Summary:        Kickstarts for building oVirt Node isos including %{name}
 Group:          Applications/System
 Requires:       ovirt-node-recipe >= 2.6.0
 
+%{!?_licensedir:%global license %%doc}
 
 %post
 chkconfig ovirt-ha-agent on
@@ -54,11 +55,13 @@ make install DESTDIR=%{buildroot}
 
 
 %files
+%license COPYING
 %{_sysconfdir}/rwtab.d/hosted-engine
 %{python_sitelib}/ovirt/node/setup/hostedengine
 #%{_sysconfdir}/ovirt-plugins.d
 
 %files recipe
+%license COPYING
 %{recipe_root}
 
 %changelog
