Add a wrapper for ovirt-hosted-engine-setup
Ungraceful exits of ovirt-hosted-engine-setup for whatever reason
(answering "No" to some required prompt, not enough space, other
problems) immediately exited the screen session and gave users
no time to see or note the message. Wrap it so they can

Change-Id: I75cc82b883629a937c64590e3311ae8a09ee3bc9
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1144917
Signed-off-by: Ryan Barry <rbarry@redhat.com>
Reviewed-on: https://gerrit.ovirt.org/39755
Reviewed-by: Douglas Schilling Landgraf <dougsland@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,7 +26,8 @@ SHELL := /bin/bash
 SUBDIRS = \
 	src \
 	rwtab \
-	recipe
+	recipe \
+	scripts
 
 EXTRA_DIST = \
   ovirt-node-plugin-hosted-engine.spec \
