Add config.py to ovirt-node-plugin-hosted-engine spec
It got added to makefiles, but not the specfile. Include it so
it's packaged

Change-Id: Id0012c6af8ff0b31e296018d989cad5cfd8583da
Signed-off-by: Ryan Barry <rbarry@redhat.com>
Reviewed-on: https://gerrit.ovirt.org/41083
Reviewed-by: Douglas Schilling Landgraf <dougsland@redhat.com>
Tested-by: Douglas Schilling Landgraf <dougsland@redhat.com>

--- a/ovirt-node-plugin-hosted-engine.spec.in
+++ b/ovirt-node-plugin-hosted-engine.spec.in
@@ -40,6 +40,7 @@ Provides kickstart files for generating an oVirt Node ISO image containing
 
 %files
 %{python_sitelib}/ovirt/node/setup/hostedengine/__init__.py*
+%{python_sitelib}/ovirt/node/setup/hostedengine/config.py*
 %{python_sitelib}/ovirt/node/setup/hostedengine/hosted_engine_page.py*
 
 %prep
