Refactor hosted-engine-page
Move the configuration writing logic out to the model instead of
keeping it in the page.

Simplify the logic a little bit so it's easier to follow. Move
refactorable parts (like tempfile creation) to nested functions.
Move all constants to config.py so they're reusable from elsewhere

Change-Id: Id9a8c4e1078408a47ed3d950c232e768e65cd844
Signed-off-by: Ryan Barry <rbarry@redhat.com>
Reviewed-on: https://gerrit.ovirt.org/41084
Reviewed-by: Fabian Deutsch <fabiand@redhat.com>
Tested-by: Fabian Deutsch <fabiand@redhat.com>
Continuous-Integration: Fabian Deutsch <fabiand@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,7 @@
 OVIRT_CACHE_DIR	?= $(HOME)/ovirt-cache
 
 PYTHONSOURCES = \
-  $(shell find scripts -name \*.py)
+  $(shell find src -name \*.py)
 
 SHELL := /bin/bash
 
@@ -91,7 +91,7 @@ doctests:
 	@for M in $(PYTHONSOURCES); \
 	do \
 		echo Doctest on "$$M"; \
-		PYTHONPATH=. python -m doctest $$M || exit 1; \
+		PYTHONPATH=. nosetests -q --with-doctest $$M || exit 1; \
 	done
 
 pep8:
