Adding automation and CI script files
Change-Id: Ieb57a8a89b93257a717ce2ff663b4a3efabf7c1b
Signed-off-by: Tolik Litovsky <tlitovsk@redhat.com>
Reviewed-on: https://gerrit.ovirt.org/42601
Continuous-Integration: Jenkins CI
Reviewed-by: Douglas Schilling Landgraf <dougsland@redhat.com>
Reviewed-by: Fabian Deutsch <fabiand@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -74,7 +74,7 @@ publish:
 .PHONY: rpms publish srpms
 
 
-check-local: doctests pep8 pyflakes pylint
+check-local: doctests pep8 pyflakes
 	@echo -e "---\n Passed.\n---"
 
 check-local-fast:
@@ -99,14 +99,6 @@ pep8:
 	do \
 		echo pep8 on "$$M"; \
 		PYTHONPATH=. pep8 -r $$M || exit 1; \
-	done
-
-PYLINT=pylint -f parseable --include-ids=yes --rcfile=.pylintrc
-pylint:
-	@for M in $(PYTHONSOURCES); \
-	do \
-		echo pylint on "$$M"; \
-		PYTHONPATH=. $(PYLINT) $$M || exit 1; \
 	done
 
 pyflakes:
