spec: Add requirement for ovirt-hosted-engine-ha
The plugin uses the python library ovirt-hosted-engine-ha.

Change-Id: I983c927eac4d22174c2d7b7167114bad4bc904f5
Signed-off-by: Douglas Schilling Landgraf <dougsland@redhat.com>
Reviewed-on: https://gerrit.ovirt.org/44645

--- a/ovirt-node-plugin-hosted-engine.spec.in
+++ b/ovirt-node-plugin-hosted-engine.spec.in
@@ -14,6 +14,7 @@ Group:          Applications/System
 Summary:        Hosted Engine plugin for %{product_family} image
 BuildRequires:  python2-devel
 Requires:       ovirt-hosted-engine-setup
+Requires:       ovirt-hosted-engine-ha
 Requires:       screen
 Requires:       python-requests
 
