spec: Add buildreq for autoconf/automake
Change-Id: I873c029d3c3c0e0abf9de18f4f48abf26a3c640b
Signed-off-by: Douglas Schilling Landgraf <dougsland@redhat.com>
Reviewed-on: https://gerrit.ovirt.org/48022
(cherry picked from commit 66f2793fb1f3bf4ed65ecf46729103c86ef16c88)
Reviewed-on: https://gerrit.ovirt.org/48023

--- a/ovirt-node-plugin-hosted-engine.spec.in
+++ b/ovirt-node-plugin-hosted-engine.spec.in
@@ -20,6 +20,9 @@ Requires:       python-requests
 
 BuildArch:      noarch
 
+BuildRequires:  autoconf
+BuildRequires:  automake
+
 %package recipe
 Summary:        Kickstarts for building oVirt Node isos including %{name}
 Group:          Applications/System
